# FMIPython-triviador-project

./: README.md  pyproject.toml  run_game.py
tests/: conftest.py  test_config.py  test_game_logic.py  test_highscore_manager.py  test_joker_system.py  test_models.py  test_network.py  test_question_manager.py
triviador/: __init__.py  __main__.py  app.py
triviador/core/: __init__.py  config.py  models.py
triviador/data/: __init__.py  highscores.json  questions.json  questions.txt
triviador/logic/: __init__.py  game_logic.py  highscore_manager.py  joker_system.py  question_manager.py
triviador/network/: __init__.py  network.py
triviador/ui/: __init__.py  screens.py  ui_components.py
